48 h 15 percent off promotion

--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -70,7 +70,4 @@
 
 coffee:
   $ ->
-    vex.open({
-      content: '<div class="h1">48h only! Save 15% off your killer prom dress</div><div class="h1 timer-box"><span class="hh">hh</span><span class="mm">mm</span><span class="ss">ss</span></div>',
-      className: 'vex-dialog-default vex-dialog-bottom vex-dialog-pink'
-    })
+    window.initPromos()
