--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -88,7 +88,7 @@ ruby:
       h1 = @product.name
       p.product-section-description
       p#product-price
-        = product_price_with_discount(@product.price, @product.discount)
+        span.price = product_price_with_discount(@product.price, @product.discount)
 
     .product-section--selection
       /! size & color & customizations selectors
