--- a/app/views/users/wishlists_items/index.html.slim
+++ b/app/views/users/wishlists_items/index.html.slim
@@ -63,7 +63,7 @@ javascript:
                       = image_tag product.image_url, :class => "img-responsive", alt: product.name
                       .details
                         .name= product.name
-                        .price= product_price_with_discount(product.price, product.discount)
+                        span.price = product_price_with_discount(product.price, product.discount)
 
                     .actions.text-center
                       = link_to 'Buy this Dress', product.path, class: 'buy btn btn-md btn-black', data: { variant: product.variant_id, id: product.item_id }
