[ref] extract typekit_id to configuration variable

--- a/app/views/layouts/redesign/maintenance.html.slim
+++ b/app/views/layouts/redesign/maintenance.html.slim
@@ -10,7 +10,7 @@ doctype html
     = csrf_meta_tags
 
     = render 'layouts/redesign/head'
-    = render :partial => 'shared/typekit', locals: { kit_id: 'day0prb' }
+    = render :partial => 'shared/typekit'
 
   body#top.maintenance-page
     = yield
