--- a/app/views/layouts/redesign/_head.html.slim
+++ b/app/views/layouts/redesign/_head.html.slim
@@ -17,12 +17,10 @@ meta property="og:description" content=truncate(get_meta_description, length:140
 meta property="og:site_name" content="Fame &amp; Partners"
 
 = render :partial => 'shared/sharethis'
+= render :partial => 'shared/typekit'
 
 - if !Rails.env.production?
   meta name="robots" content="noindex, nofollow"
-  = render :partial => 'shared/typekit', locals: { kit_id: 'kur6crm' }
-- else
-  = render :partial => 'shared/typekit', locals: { kit_id: 'day0prb' }
 
 - if Rails.env.production? || Features.active?(:test_analytics, current_spree_user)
   = render '/shared/customerio'
