[ref] passing product as variable to its share buttons partial
[ref] extract typekit_id to configuration variable

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -126,7 +126,7 @@ ruby:
             |+ Moodboard
 
         .row.social-media-links
-          = render :partial => 'share_buttons'
+          = render :partial => 'share_buttons', :locals => { product: @product }
 
 /! About The Dress
 .col-sm-12.screen-height
