--- a/app/views/spree/admin/product_colors/new.js.erb
+++ b/app/views/spree/admin/product_colors/new.js.erb
@@ -1,2 +1,2 @@
-html = '<%=j  render(partial: 'spree/admin/product_colors/form.html') %>';
+html = '<%=j  render(partial: 'spree/admin/product_colors/form') %>';
 $('#new_product_colors').html(html)
