--- a/engines/style_quiz/app/views/style_quiz/questions/color_palette.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/color_palette.html.slim
@@ -6,21 +6,21 @@
   .grid-container
     / Hair
     .quiz-catalog.text-center.hair
-      - question.answers.hair.each_with_index do |color_name, index|
-        .quiz-catalog-item class="#{ index == 0 ? 'selected' : '' }" data-value=(color_name)
+      - question.answers.where(group: 'hair').each do |answer|
+        .quiz-catalog-item class="#{ answer.selected ? 'selected' : '' }" data-value=(answer.id)
           .quiz-catalog-picture
-            .hair-box class=(color_name.parameterize)
+            .hair-box class=(answer.value.parameterize)
           .quiz-catalog-title
-            => color_name
+            => answer.name
             .checkmark
 
     .quiz-catalog.text-center.eyes
-      - question.answers.eyes.each_with_index do |color_name, index|
-        .quiz-catalog-item class="#{ index == 0 ? 'selected' : '' }" data-value=(color_name)
+      - question.answers.where(group: 'eyes').each do |answer|
+        .quiz-catalog-item class="#{ answer.selected ? 'selected' : '' }" data-value=(answer.id)
           .quiz-catalog-picture
-            .eyes-box class=(color_name.parameterize)
+            .eyes-box class=(answer.value.parameterize)
           .quiz-catalog-title
-            = color_name
+            = answer.name
             .checkmark
     
     .row
