--- a/engines/style_quiz/app/views/style_quiz/questions/color_dresses.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/color_dresses.html.slim
@@ -8,14 +8,12 @@
       | like to wear?
   .grid-container
     .quiz-catalog.text-center
-      - question.answers.each_with_index do |answer, index|
-        - color_name = answer.first
-        - color_code = answer.last
-        .quiz-catalog-item class="#{ index == 0 ? 'selected' : '' }" data-value=(color_name)
+      - question.answers.each do |answer|
+        .quiz-catalog-item class="#{ answer.selected ? 'selected' : '' }" data-value=(answer.id)
           .quiz-catalog-picture
-            .model-mask style="background-color: #{ color_code}"
+            .model-mask style="background-color: #{ answer.value }"
           .quiz-catalog-title
-            => color_name.capitalize
+            => answer.name.capitalize
             .checkmark
     .row
       .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
