[ref] require vex css from assets pipeline
Vex CSS is on a contained folder, and it’s being required recursively through that folder, using the assets pipeline flow, instead of adding @import to the CSS

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -1,10 +1,8 @@
+//= require_tree ./libs/vex
 @import 'redesign/vars';
 @import 'redesign/mixins';
 @import 'redesign/extras/helpers';
 
-@import 'libs/vex.css';
-@import 'libs/vex-theme-flat-attack.css';
-@import 'libs/vex-theme-bottom-right-corner.css';
 @import 'redesign/libs/chosen';
 @import 'redesign/extras/chosen_override';
 
