[ref] jQuery is served through cloudflare’s CDN

--- a/app/views/layouts/redesign/_head.html.slim
+++ b/app/views/layouts/redesign/_head.html.slim
@@ -16,6 +16,8 @@ meta property="og:description" content=truncate(get_meta_description, length:140
 
 meta property="og:site_name" content="Fame &amp; Partners"
 
+script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"
+
 = render :partial => 'shared/sharethis'
 = render :partial => 'shared/typekit'
 
