--- a/app/views/landing_pages/_product.html.slim
+++ b/app/views/landing_pages/_product.html.slim
@@ -1,10 +1,9 @@
 .col-md-3.col-xs-6.col-xxs-12.category--item
-  = link_to collection_product_path(product) do  
-    - if product.images.any?
-      = cropped_product_hoverable_image_tag(product)
+  = link_to collection_product_path(product) do
+    = cropped_product_hoverable_image_tag(product)
   .details.text-center
     span.name = product.name
-    span.price =  price_for_product(product)
+    span.price = price_for_product(product)
 
-  - if product.fast_delivery == true
+  - if product.fast_delivery?
 	 = image_tag src='express_delivery.png', class: 'express-delivery'
