--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -1,3 +1,4 @@
+<% content_for :inline_javascript do %>
 <% if tracker = Spree::Tracker.current %>
   <%= javascript_tag do %>
     var _gaq = _gaq || [];
@@ -85,4 +86,5 @@
   </script>
   <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6016695263696&amp;cd[value]=0.00&amp;cd[currency]=AUD&amp;noscript=1" /></noscript>
 
+<% end %>
 <% end %>
