[feat] bohemian menu

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -169,10 +169,10 @@ ruby:
               .stories.container-fluid.center
 
                 .col-md-2
-                  = link_to here_comes_the_sun_collection_path do
+                  = link_to bohemian_summer_collection_path do
                     .image-container
-                       = image_tag src='edits/here-comes-the-sun/nav.jpg', :class => 'img-responsive', :alt => 'Here Comes the Sun'
-                    p.text-center.edit-title Here Comes The Sun
+                       = image_tag src='http://assets.fameandpartners.com/lookbook/bohemian-summer/nav.jpg', :class => 'img-responsive', :alt => 'Here Comes the Sun'
+                    p.text-center.edit-title Bohemian Summer
 
                 .col-md-2
                   = link_to bridesmaid_collection_path do
@@ -187,16 +187,16 @@ ruby:
                     p.text-center.edit-title I'll Have What She's Having
 
                 .col-md-2
+                  = link_to here_comes_the_sun_collection_path do
+                    .image-container
+                       = image_tag src='edits/here-comes-the-sun/nav.jpg', :class => 'img-responsive', :alt => 'Here Comes the Sun'
+                    p.text-center.edit-title Here Comes The Sun
+
+                .col-md-2
                   = link_to prom_collection_path do
                     .image-container.real-prom
                       = image_tag src='edits/real_prom/1-edits-nav.jpg', :class => 'img-responsive', :alt => 'Our Official Prom Collection'
                     p.text-center.edit-title Our Official Prom Collection
-
-                .col-md-2
-                  = link_to break_hearts_collection_path do
-                    .image-container
-                      = image_tag src='edits/BREAK-HEARTS/1_141119_F&P_NYE-edits-nav.jpg', :class => 'img-responsive', :alt => 'Break Hearts not Bank Accounts'
-                    p.text-center.edit-title Break Hearts not Bank Accounts
 
           li.menu-item
             = link_to 'Blog', 'http://fameandpartners.tumblr.com/', class: 'menu-item--link'
