Add new fb add-to-cart pixel

--- a/app/views/layouts/redesign/_javascript.html.erb
+++ b/app/views/layouts/redesign/_javascript.html.erb
@@ -3,14 +3,14 @@
 <!-- bootstrap -->
 <script type="text/javascript">
   moodboard_data  = <%= raw current_user_moodboard.serialize.to_json %>;
-  
+
   window.app = {
     env:    '<%= Rails.env %>',
     debug:  <%= Rails.env.development? %>,
     user:   { id: <%= current_spree_user.present? ? current_spree_user.id : 'null' %> },
     user_signed_in: <%= signed_in? %>,
     site_version: {  name: '<%= current_site_version.try(:name) %>' },
-    shopping_cart: new helpers.ShoppingCart({}),
+    shopping_cart: new helpers.ShoppingCart({track: <%= Rails.env.production? %>}),
     user_moodboard: new helpers.UserMoodboard({})
   };
 
