--- a/app/assets/stylesheets/redesign/extras/_helpers.css.scss
+++ b/app/assets/stylesheets/redesign/extras/_helpers.css.scss
@@ -10,6 +10,14 @@
   }
 }
 
+// Text helpers
+.font-forum {
+ font-family: $font-brand-serif;
+} 
+// @end Text helpers
+// -----------------
+
+
 // Rhombus
 .rhombus {
   text-align: center;
