--- a/app/assets/stylesheets/redesign/_cart.css.scss
+++ b/app/assets/stylesheets/redesign/_cart.css.scss
@@ -13,6 +13,21 @@
   }
 }
 
+.cart-promo-message {
+	padding:15px 5px 15px 5px;
+	border-bottom: 1px solid #d9d9d9;
+  text-align:center;
+  color:#003192;
+
+  .flag-uk {
+    background-image: url('/assets/flags/gb.png');
+    height:11px;
+    width:16px;
+    display:inline-block;
+    margin:0 0.2em 0 0.2em;
+  }
+}
+
 .cart-item-title {
   font-size: 1.1em;
   color: #000;
@@ -20,7 +35,7 @@
 }
 .cart-item-image-holder {
   margin-right: 1em;
-  .cart-item-image { 
+  .cart-item-image {
     margin-right: 0;
     @media (min-width: 1200px) { width: 80px;}
   }
