--- a/app/views/layouts/redesign/_shopping_bag.html.slim
+++ b/app/views/layouts/redesign/_shopping_bag.html.slim
@@ -1,11 +1,12 @@
 ruby:
   shopping_bag_init = "
     window.app.shopping_bag = new ShoppingBag({
-      cart: window.app.shopping_cart,
-      overlay:     '#shadow-layer',
-      container:   '#cart',
-      toggle_link: '#cart-trigger',
-      auto_open:   /open_cart=true/.test(window.location.search)
+      cart:         window.app.shopping_cart,
+      overlay:      '#shadow-layer',
+      container:    '#cart',
+      toggle_link:  '#cart-trigger',
+      auto_open:    /open_cart=true/.test(window.location.search),
+      country_code: '#{session[:country_code]}'
     });
   "
 = content_for :inline_javascript do
