add timer option for modal generator

--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -182,6 +182,8 @@
       label: "timeout",    param: "t",   required: false, encoded: false, type: 'integer',
       defaultValue: 2
     }, {
+      label: "timer",      param: "ti",  required: false, encoded: false, type: 'integer'
+    }, {
       label: "class_name", param: "s",   required: false, encoded: true,  type: 'string',
       defaultValue: '<%= decode(params[:s]).html_safe %>'
     }, {
