add countdown timer for modal

--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -6,6 +6,7 @@
     content = decode(params[:c]) || promocode
     class_name = decode(params[:s]) || class_name
     timeout = params[:t] || 3
+    timer   = params[:ti] ? decode(params[:ti]) : nil
 
     email_capture_modal = "
       new window.page.EmailCaptureModal({
@@ -17,6 +18,7 @@
         action:    \"#{campaigns_email_capture_path}\",
         container: \"#email-capture-fields\",
         timeout:    #{timeout},
+        timer:      #{timer || 0},
         force:      true
       });
     "
