--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -182,7 +182,7 @@
       label: "timeout",    param: "t",   required: false, encoded: false, type: 'integer',
       defaultValue: 2
     }, {
-      label: "timer",      param: "ti",  required: false, encoded: false, type: 'integer'
+      label: "timer",      param: "ti",  required: false, encoded: true, type: 'integer'
     }, {
       label: "class_name", param: "s",   required: false, encoded: true,  type: 'string',
       defaultValue: '<%= decode(params[:s]).html_safe %>'
