--- a/app/views/shared/_email_capture_modal.html.slim
+++ b/app/views/shared/_email_capture_modal.html.slim
@@ -19,6 +19,7 @@
         container: \"#email-capture-fields\",
         timeout:    #{timeout},
         timer:      #{timer || 0},
+        auto_apply_promo: #{params[:aap]},
         force:      true
       });
     "
