--- a/app/views/spree/admin/modals/index.html.erb
+++ b/app/views/spree/admin/modals/index.html.erb
@@ -191,6 +191,8 @@
       defaultValue: 'true'
     }, {
       label: "raw",        param: "raw", required: false, encoded: false, type: 'boolean'
+    }, {
+      label: "auto_apply_promo", param: "aap", required: true, encoded: false, type: 'boolean', defaultValue: false
     }
   ];
 
