--- a/app/views/lookbook/show.html.slim
+++ b/app/views/lookbook/show.html.slim
@@ -1,7 +1,7 @@
 = content_for :head do
   meta name="robots" content="noindex, follow"
 
-= render :partial => '/products/collections/javascript', :locals => { :page_size => 99 }
+= render :partial => '/products/collections/javascript', :locals => { :page_size => 44 }
 
 .page-content
   ul.rslides
@@ -15,5 +15,7 @@
     .container.relative.products-collection
       = render partial: 'products_without_content'
 
-    .row.relative.more-products
-      = link_to 'More Dresses', dresses_path, class: 'btn btn-black'
+    = render partial: 'pagination'
+
+    / .row.relative.more-products
+    /   = link_to 'More Dresses', dresses_path, class: 'btn btn-black'
