[fix] Remove 1 of the bridesmaid routes

--- a/app/views/layouts/_header_regular_navigation.html.slim
+++ b/app/views/layouts/_header_regular_navigation.html.slim
@@ -131,7 +131,7 @@
                             li = link_to 'All Dresses', dresses_path, title: 'All Dresses', class: "collection"
                             li = link_to 'Long Dresses', build_taxon_path('Long'), title: 'Long Dresses', class: "collection"
                             li = link_to 'Short Dresses', build_taxon_path('Short'), title: 'Short Dresses', class: "collection"
-                            li = link_to 'Bridesmaid Dresses', bridesmaid_lp_path, title: 'Bridesmaid Dresses', class: "collection"
+                            li = link_to 'Bridesmaid Dresses', bridesmaid_collection_path, title: 'Bridesmaid Dresses', class: "collection"
                             li = link_to 'Wicked Game', '/amfam-dresses', title: 'The Wicked Game Collection', class: "collection"
                             li = link_to 'Formal Dresses', build_taxon_path('Formal'), title: 'Formal Dresses', class: "collection"
                             li = link_to 'Prom Dresses', build_taxon_path('Prom'), title: 'Prom Dresses', class: "collection"
