--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -104,7 +104,7 @@ ruby:
                         li.mega-menu-list--item
                           = link_to 'Ball Gowns', build_taxon_path('Ball Gowns'), title: 'Ball Gowns'
                         li.mega-menu-list--item
-                          = link_to 'Bridesmaid', bridesmaid_lp_path, title: 'Bridesmaid'
+                          = link_to 'Bridesmaid', bridesmaid_collection_path, title: 'Bridesmaid'
                         li.mega-menu-list--item
                           = link_to 'Graduation', build_taxon_path('Graduation'), title: 'Graduation'
                         li.mega-menu-list--item
