--- a/app/views/layouts/redesign/_mobile_menu.html.slim
+++ b/app/views/layouts/redesign/_mobile_menu.html.slim
@@ -32,7 +32,7 @@
       h3 Events
       .list-group
         = link_to 'Prom', build_taxon_path('Prom'), class: 'list-group-item', title: 'Prom'
-        = link_to 'Bridesmaid', bridesmaid_lp_path, class: 'list-group-item', title: 'Bridesmaid'
+        = link_to 'Bridesmaid', bridesmaid_collection_path, class: 'list-group-item', title: 'Bridesmaid'
         = link_to 'Formal', build_taxon_path('Formal'), class: 'list-group-item', title: 'Formal'
         = link_to 'Wedding', build_taxon_path('Wedding'), class: 'list-group-item', title: 'Wedding'
         = link_to 'Homecoming', build_taxon_path('Homecoming'), class: 'list-group-item', title: 'Homecoming'
