--- a/app/views/lookbook/show.html.slim
+++ b/app/views/lookbook/show.html.slim
@@ -15,7 +15,7 @@
     .container.relative.products-collection
       = render partial: 'products_without_content'
 
-    = render partial: 'pagination'
+    / = render partial: 'pagination'
 
-    / .row.relative.more-products
-    /   = link_to 'More Dresses', dresses_path, class: 'btn btn-black'
+    .row.relative.more-products
+      = link_to 'More Dresses', dresses_path, class: 'btn btn-black'
