[style quiz ] added question validations

--- a/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
@@ -21,7 +21,7 @@
         .col-6.col-middle.col-compact.text-center
           .form-centered.facebook-box
             h2 Import my details from Facebook.
-            = link_to '#', class: 'btn' do
+            = link_to main_app.fb_auth_path, class: 'btn' do
               span.fa.fa-facebook
 / @end Question 1/11
 / ------------------
