[fix] move lookbook nav items to s3

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -171,31 +171,31 @@ ruby:
                 .col-md-2
                   = link_to bohemian_summer_collection_path do
                     .image-container
-                       = image_tag src='http://assets.fameandpartners.com/lookbook/bohemian-summer/nav.jpg', :class => 'img-responsive', :alt => 'Here Comes the Sun'
+                       = image_tag src="//#{configatron.asset_host}/lookbook/bohemian-summer/nav.jpg", :class => 'img-responsive', :alt => 'Here Comes the Sun'
                     p.text-center.edit-title Bohemian Summer
 
                 .col-md-2
                   = link_to bridesmaid_collection_path do
                     .image-container.bridesmaids
-                      = image_tag src='edits/bridesmaids/nav.jpg', :class => 'img-responsive', :alt => 'Our Beautiful Bridesmaids Collection'
+                      = image_tag src="//#{configatron.asset_host}/lookbook/bridesmaids/nav.jpg", :class => 'img-responsive', :alt => 'Our Beautiful Bridesmaids Collection'
                     p.text-center.edit-title Besties and Bridesmaids Collection
 
                 .col-md-2
                   = link_to all_size_collection_path do
                     .image-container
-                      = image_tag src='edits/all-size/nav.jpg', :class => 'img-responsive', :alt => 'All Sizes'
+                      = image_tag src="//#{configatron.asset_host}/lookbook/all-size/nav.jpg", :class => 'img-responsive', :alt => 'All Sizes'
                     p.text-center.edit-title I'll Have What She's Having
 
                 .col-md-2
                   = link_to here_comes_the_sun_collection_path do
                     .image-container
-                       = image_tag src='edits/here-comes-the-sun/nav.jpg', :class => 'img-responsive', :alt => 'Here Comes the Sun'
+                       = image_tag src="//#{configatron.asset_host}/lookbook/here-comes-the-sun/nav.jpg", :class => 'img-responsive', :alt => 'Here Comes the Sun'
                     p.text-center.edit-title Here Comes The Sun
 
                 .col-md-2
                   = link_to prom_collection_path do
                     .image-container.real-prom
-                      = image_tag src='edits/real_prom/1-edits-nav.jpg', :class => 'img-responsive', :alt => 'Our Official Prom Collection'
+                      = image_tag src="//#{configatron.asset_host}/lookbook/prom/nav.jpg", :class => 'img-responsive', :alt => 'Our Official Prom Collection'
                     p.text-center.edit-title Our Official Prom Collection
 
           li.menu-item
